# ordis

./: .gitattributes  .gitignore  .lldbinit  .tmuxinator.yml  Cargo.nix  Cargo.toml  OpenCode.md  flake.nix  http_client.rs  readme.md  shell.nix  test.txt
.direnv/: nix-profile-.5987.d272ca50d1f7  nix-profile-.5987.d272ca50d1f7.rc
migrations/2024-06-12-163058_create_users/: up.sql
migrations/2024-06-21-163323_initial/: up.sql
migrations/2024-06-24-120507_characters/: up.sql
migrations/2024-07-31-152932_stat_block_and_hash/: down.sql  up.sql
migrations/2024-08-01-134550_store_stat_block_message_reference/: down.sql  up.sql
migrations/2024-09-09-143418_character_info_in_character_table/: down.sql  up.sql
migrations/2024-09-10-122957_selected-character-id-in-user/: down.sql  up.sql
migrations/2024-09-15-184957_character_id_int/: down.sql  up.sql
migrations/2024-09-17-131839_remove-character-sheet-from-users/: down.sql  up.sql
migrations/2024-10-02-203119_migrate-character-sheets/: down.sql  up.sql
migrations/2024-10-13-104549_add-spell-blocks/: down.sql  up.sql
migrations/2024-10-13-135016_add-mana/: down.sql  up.sql
migrations/2024-10-15-193100_mana_readout/: down.sql  up.sql
migrations/2025-07-11-130601_default_roll_channel/: up.sql
migrations/2025-08-26-173605_web-app-support/: down.sql  up.sql
migrations/2025-11-08-182549_saved-rolls/: down.sql  up.sql
src/: common.rs  db.rs  dice.rs  dictionary.rs  gpt.rs  llm.rs  main.rs  mir.rs  schema.rs  stat_puller.rs
src/admin/: colour_picker.rs  mod.rs  nickname.rs
src/db/: characters.rs  (+5 more)
(+37 files in other folders)
