[package]
name = "ordis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
poise = "=0.5.7"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"]}
lazy_static = "1.4.0"
serde = "1.0.198"
serde_json = "1.0.116"
chrono = "0.4.38"
regex = "1.10.4"
meval = "0.2.0"
diesel = { version = "2.1.0", features = ["sqlite"]}
